# band-management

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  Makefile  README.md  app.cfg  app.ci.cfg  app.ci.docker.cfg  app.test.cfg  babel.cfg  docker-compose.yml  eslint.config.js  pyproject.toml
.github/workflows/: build-docker-image.yml  pre-commit.yml  test.yaml
src/band_management/: __init__.py  config.py  conftest.py  exceptions.py  sanitizer.py  tools.py  translate.py
src/band_management/bloks/: conftest.py
src/band_management/bloks/band_management/: __init__.py  band.py  instrument.py  member.py  mixins.py  music.py  musician.py  musician_play_in_band.py  score.py  time_signature.py  tone.py
src/band_management/bloks/band_management/tests/: test_band_management.py
src/band_management/bloks/bm_base/: __init__.py  band.py  band_management.py  member.py  music.py  musician.py  score.py
src/band_management/bloks/bm_base/tests/: conftest.py  test_band.py  test_band_management.py  test_member.py  test_music.py  test_musician.py  test_score.py
src/band_management/bloks/bm_event/: __init__.py  event.py  event_music.py
src/band_management/bloks/bm_event/documents/: event.html
src/band_management/bloks/bm_event/tests/: conftest.py  test_event.py
src/band_management/bloks/bm_report/: __init__.py  report.py  template.py
src/band_management/bloks/bm_report/templates/: layaout_portrait_a4.html
src/band_management/bloks/bm_report/tests/: test_template.py
src/band_management/bloks/bm_responsive_webapp/: __init__.py  band.py  event.py  fastapi_utils.py  jinja.py  main.py  member.py  mockup-index.html  music.py  musician.py  paging.py  score.py
src/band_management/bloks/bm_responsive_webapp/auth/: __init__.py  user.py
src/band_management/bloks/bm_responsive_webapp/band_management/: __init__.py  musician.py
src/band_management/bloks/bm_responsive_webapp/static/assets/: credit.md
src/band_management/bloks/bm_responsive_webapp/static/css/: navbar.css  sortable.css  style.css
src/band_management/bloks/bm_responsive_webapp/static/js/: error.js  event-form.js  modal.js  navbar.js  sortable.js  theme.js
src/band_management/bloks/bm_responsive_webapp/templates/: band-invite.html  band-prepare.html  band-update.html  bands.html  credits.html  error.html  event-prepare.html  event-update.html  events.html  home.html  index.html  login.html  music-prepare.html  music-update.html  musics.html  profile.html  register-confirmation.html  register.html  reset-password.html  score-prepare.html  score-update.html  scores.html  terms.html
src/band_management/bloks/bm_responsive_webapp/templates/bands/: band-form.html  search-result.html
src/band_management/bloks/bm_responsive_webapp/templates/events/: event-form.html  prepare-modal.html  search-result.html
src/band_management/bloks/bm_responsive_webapp/templates/layouts/: base.html  connected.html  disconnected.html  layout.html
src/band_management/bloks/bm_responsive_webapp/templates/macros/: menu-item.html  navbar-item.html
src/band_management/bloks/bm_responsive_webapp/templates/musicians/: musician-field-selection-items.html  musician-field-selection.html  musician-form-profile.html  musician-form.html  prepare-modal.html
src/band_management/bloks/bm_responsive_webapp/templates/musics/: music-field-selection-items.html  music-field-selection.html  music-form.html  prepare-modal.html  search-dropdown-result.html  search-result.html
src/band_management/bloks/bm_responsive_webapp/templates/scores/: score-form-details.html  score-form.html  search-result.html
src/band_management/bloks/bm_responsive_webapp/tests/: conftest.py  test_fastapi_utils.py  test_jinja.py  test_model_auth_user.py  test_model_bm_musician.py  test_paging.py  test_web_app.py  test_web_app_band.py  test_web_app_event.py  test_web_app_member.py  test_web_app_music.py  test_web_app_musician.py  test_web_app_score.py
src/band_management/bloks/http_auth_base/: README.md  __init__.py  auth_api.py
src/band_management/bloks/http_auth_base/auth/: __init__.py  credential_store.py  scope.py  user.py
src/band_management/bloks/http_auth_base/schemas/: auth.py  base.py
src/band_management/bloks/http_auth_base/tests/: conftest.py  test_auth_api.py  test_auth_models.py
src/band_management/bloks/music_brainz/: __init__.py  music.py  musicbrainz.py
src/band_management/bloks/music_brainz/scripts/: musicbrainz_importer.py
src/band_management/bloks/music_brainz/tests/: test_importer.py  test_music.py
src/band_management/i18n/: band-management.pot
src/band_management/i18n/fr/LC_MESSAGES/: messages.po
src/band_management/storage/: __init__.py  base.py
src/band_management/storage/tests/: test_filesystem_storage.py
src/band_management/tests/: test_sanitizer.py  test_tools.py
(+2 files in other folders)
