[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "band-management"
version = "0.1.0"
description = "Band management web server"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [
  { name = "Pierre Verkest", email = "pierre@verkest.fr" },
]
dynamic = ["__version__"]

dependencies = [
    "anyblok",
    "anyblok-fastapi",
    "babel",
    "python-multipart",
    "jinja2",
    "psycopg",
    "uuid7",
    "pydantic[email]",
    "pydantic-extra-types",
    "pycountry",
    "bcrypt<4.0.0",
    "python-jose[cryptography]",
    #  "libpass",
    "passlib",
    "aiofile",
]

[project.scripts]

[project.entry-points.bloks]
http-auth-base="band_management.bloks.http_auth_base:HTTPAuthBase"
band-management-base="band_management.bloks.bm_base:BandManagementBase"
band-management-responsive-webapp="band_management.bloks.bm_responsive_webapp:BandManagementResponsiveWebApp"
band-management="band_management.bloks.band_management:BandManagement"


[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "httpx>=0.28.1",
  "pytest-asyncio",
  "freezegun",
]

[tool.hatch.version]
path = "src/band_management/__init__.py"

[tool.uv.sources]
anyblok-fastapi = { git = "git+https://github.com/AnyBlok/AnyBlok_fastapi", branch="master" }

[tool.coverage.run]
branch = true
omit = [
  "__init__.py",
  "*/tests/*",
  "conftest.py",
  "config.py",
]

[tool.coverage.report]
show_missing = true

[tool.babel]
mapping_file = "babel.cfg"
